<resources>
    <string name="app_name">VoiceVersa</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="login_txt">Login</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="dont_have_acc_txt">Don\'t have an account?</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="create_acc_txt">Create your free Account</string>
    <string name="name_txt">Name</string>
    <string name="enter_name_txt">Enter your Full Name</string>
    <string name="example_mail_txt">xyz@gmail.com</string>
    <string name="pswd_instruction">8 or more characters</string>
    <string name="re_pswd_txt">Re-enter Password:</string>
    <string name="confirm_pswd_txt">Confirm Password</string>
    <string name="create_acc_txt2">Create Account</string>
    <string name="already_acc_txt">Already have an account?</string>
    <string name="translate_txt">Translate</string>
    <string name="title_activity_temp_map">temp_map</string>
</resources>