<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context=".Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_txt"
            android:textAlignment="center"
            android:textColor="@color/tert"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/voiceversa_no_bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/prim">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/sec"
                android:hint="@string/email_txt"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/prim"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/prim">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pswd_edtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/sec"
                android:hint="@string/password_txt"
                android:inputType="textPassword"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/prim"
            android:text="@string/login_txt"
            android:textColor="@color/white"
            app:cornerRadius="28dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dont_have_acc_txt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signuptxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_up_txt"
                android:onClick="onSignupClick"
                android:textColor="@color/tert"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck"/>

        </LinearLayout>






    </LinearLayout>









</androidx.constraintlayout.widget.ConstraintLayout>