<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"

                android:textSize="40sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start your free trial"
                android:textColor="@color/prim"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Personal Details*"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NameLayout"
                android:theme="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/prim">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/prim"
                    android:hint="Full Name"
                    android:inputType="text"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EmailLayout"
                android:theme="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/prim">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_signup_edtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/sec"
                    android:hint="Email Address"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PhLayout"
                android:theme="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/prim">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_signup_edtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/sec"
                    android:hint="Mobile Number"
                    android:inputType="phone"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Set a Password*"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SPasswordLayout"
                android:theme="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/prim"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/prim">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pswd_signup_edtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/sec"
                    android:hint="@string/pswd_instruction"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/RePasswordLayout"
                android:theme="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/prim"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/prim">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repswd_edtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/sec"
                    android:hint="@string/confirm_pswd_txt"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="I Agree to the terms and conditions"
                    android:textColor="@color/inverse"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"/>


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_account_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/prim"
                android:text="@string/create_acc_txt2"
                android:layout_above="@id/login_layout"
                android:textColor="@color/white"
                app:cornerRadius="28dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/login_layout"
                android:layout_gravity="center_horizontal"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/already_acc_txt"
                    android:textColor="@color/tert"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/logintxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="onLoginClick"
                    android:text="@string/login_txt"
                    android:textColor="@color/prim"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>








        </LinearLayout>
    </ScrollView>



</RelativeLayout>